moved image directory + discovered issue with font import making nav render take too long

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 * {
-  font-family: 'Inconsolata', Consolas;
+  font-family: 'Inconsolata';
 }
+/* 'Inconsolata', */
 
 body {
   margin: 0;
